--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-dropzone": "^0.0.7",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
