--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-google-auth": "0.0.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
